@@ -34,7 +34,7 @@ m4_define([gtk_binary_version], [2.10.0])
 m4_define([glib_required_version], [2.15.0])
 m4_define([pango_required_version], [1.19.3])
 m4_define([atk_required_version], [1.13.0])
-m4_define([cairo_required_version], [1.2.0])
+m4_define([cairo_required_version], [1.5.2])
 
 
 AC_INIT([gtk+], [gtk_version],
